@@ -1434,18 +1434,62 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "path provided by test")
   @Test
-  public void importDirectory() throws Exception {
+  public void importDirectoryOld() throws Exception {
     final String table = name.getMethodName();
-
     Configuration conf = new Configuration();
     FileSystem fs = FileSystem.get(conf);
-    File importDir = new File(rootPath, "import");
+    File errorsDir = new File(rootPath, "errors_" + table);
+    assertTrue(errorsDir.mkdir());
+    fs.mkdirs(new Path(errorsDir.toString()));
+    File importDir = createRFiles(conf, fs, table);
+    ts.exec("createtable " + table, true);
+    ts.exec("importdirectory " + importDir + " " + errorsDir + " true", true);
+    ts.exec("scan -r 00000000", true, "00000000", true);
+    ts.exec("scan -r 00000099", true, "00000099", true);
+    ts.exec("deletetable -f " + table);
+  }
+
+  @Test
+  public void importDirectory() throws Exception {
+    final String table = name.getMethodName();
+    Configuration conf = new Configuration();
+    FileSystem fs = FileSystem.get(conf);
+    File importDir = createRFiles(conf, fs, table);
+    ts.exec("createtable " + table, true);
+    ts.exec("importdirectory " + importDir + " true", true);
+    ts.exec("scan -r 00000000", true, "00000000", true);
+    ts.exec("scan -r 00000099", true, "00000099", true);
+    ts.exec("deletetable -f " + table);
+  }
+
+  @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "path provided by test")
+  @Test
+  public void importDirectoryWithOptions() throws Exception {
+    final String table = name.getMethodName();
+    Configuration conf = new Configuration();
+    FileSystem fs = FileSystem.get(conf);
+    File importDir = createRFiles(conf, fs, table);
+    ts.exec("createtable " + table, true);
+    ts.exec("notable", true);
+    ts.exec("importdirectory -t " + table + " -i " + importDir + " true", true);
+    ts.exec("scan -t " + table + " -r 00000000", true, "00000000", true);
+    ts.exec("scan -t " + table + " -r 00000099", true, "00000099", true);
+    // Attempt to re-import without -i option, error should occur
+    ts.exec("importdirectory -t " + table + " " + importDir + " true", false);
+    // Attempt re-import once more, this time with -i option. No error should occur, only a
+    // message indicating the directory was empty and zero files were imported
+    ts.exec("importdirectory -t " + table + " -i " + importDir + " true", true);
+    ts.exec("scan -t " + table + " -r 00000000", true, "00000000", true);
+    ts.exec("scan -t " + table + " -r 00000099", true, "00000099", true);
+    ts.exec("deletetable -f " + table);
+  }
+
+  private File createRFiles(final Configuration conf, final FileSystem fs, final String postfix)
+      throws IOException {
+    File importDir = new File(rootPath, "import_" + postfix);
     assertTrue(importDir.mkdir());
     String even = new File(importDir, "even.rf").toString();
     String odd = new File(importDir, "odd.rf").toString();
-    File errorsDir = new File(rootPath, "errors");
-    assertTrue(errorsDir.mkdir());
-    fs.mkdirs(new Path(errorsDir.toString()));
     AccumuloConfiguration aconf = DefaultConfiguration.getInstance();
     FileSKVWriter evenWriter = FileOperations.getInstance().newWriterBuilder()
         .forFile(even, fs, conf, CryptoServiceFactory.newDefaultInstance())
@@ -1468,11 +1512,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     evenWriter.close();
     oddWriter.close();
     assertEquals(0, ts.shell.getExitCode());
-    ts.exec("createtable " + table, true);
-    ts.exec("importdirectory " + importDir + " " + errorsDir + " true", true);
-    ts.exec("scan -r 00000000", true, "00000000", true);
-    ts.exec("scan -r 00000099", true, "00000099", true);
-    ts.exec("deletetable -f " + table);
+    return importDir;
   }
 
   @Test
@@ -1995,6 +2035,17 @@ public class ShellServerIT extends SharedMiniClusterBase {
     // validate -t option is used.
     ts.exec(String.format("importdirectory -t %s %s %s false", table, importDir, errorsDir), true);
 
+    // validate -t option is used.
+    ts.exec(String.format("importdirectory -t %s %s %s false", table, importDir, errorsDir), true);
+
+    // validate -t and -i option is used with new bulk import.
+    // This will fail as there are no files in the import directory
+    ts.exec(String.format("importdirectory -t %s %s false", table, importDir), false);
+
+    // validate -t and -i option is used with new bulk import.
+    // This should pass even if no files in import directory. Empty import dir is ignored.
+    ts.exec(String.format("importdirectory -t %s %s false -i", table, importDir), true);
+
     // validate original cmd format.
     ts.exec(String.format("table %s", table), true);
     ts.exec(String.format("importdirectory %s %s false", importDir, errorsDir), true);
@@ -2243,7 +2294,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     ts.exec("createtable " + table + " -l locg1=fam1,fam2", true);
     try (AccumuloClient accumuloClient = Accumulo.newClient().from(getClientProps()).build()) {
       Map<String,Set<Text>> lMap = accumuloClient.tableOperations().getLocalityGroups(table);
-      Set<Text> expectedColFams = new HashSet<>(Arrays.asList(new Text("fam1"), new Text("fam2")));
+      Set<Text> expectedColFams = Set.of(new Text("fam1"), new Text("fam2"));
       for (Entry<String,Set<Text>> entry : lMap.entrySet()) {
         assertEquals("locg1", entry.getKey());
         assertTrue(entry.getValue().containsAll(expectedColFams));
@@ -2265,8 +2316,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
       Map<String,Set<Text>> lMap = accumuloClient.tableOperations().getLocalityGroups(table);
       assertTrue(lMap.containsKey("locg1"));
       assertTrue(lMap.containsKey("locg2"));
-      Set<Text> expectedColFams1 = new HashSet<>(Arrays.asList(new Text("fam1"), new Text("fam2")));
-      Set<Text> expectedColFams2 = new HashSet<>(Arrays.asList(new Text("colfam1")));
+      Set<Text> expectedColFams1 = Set.of(new Text("fam1"), new Text("fam2"));
+      Set<Text> expectedColFams2 = Set.of(new Text("colfam1"));
       assertTrue(lMap.get("locg1").containsAll(expectedColFams1));
       assertTrue(lMap.get("locg2").containsAll(expectedColFams2));
       ts.exec("deletetable -f " + table);
